--- a/Projet/assets/css/styles.css
+++ b/Projet/assets/css/styles.css
@@ -74,6 +74,11 @@ background-size: contain;
   background-repeat: no-repeat;
   border-radius: 5%;
 }
+
+.backNav{
+  background: rgb(67, 68, 68) url('../img/backgroundHome Page/AHHHH (1).svg'); 
+background-size: contain;
+}
 /*panneau lateral*/
 
 
